--- a/src/css/footer.css
+++ b/src/css/footer.css
@@ -16,35 +16,47 @@ body {
     width: 100%;
     height: 27.3vh;
     flex-shrink: 0;
-    background-color: #fffbf5;
+    
  }
+
+ .feature:hover {
+
+   background: rgba( 255, 255, 255, 0.25 );
+   box-shadow: 0 8px 32px 0 rgba( 31, 38, 135, 0.37 );
+   backdrop-filter: blur( 4px );
+   -webkit-backdrop-filter: blur( 4px );
+   border-radius: 20px;
+   transition: all 0.5s ease-in-out;
+   
+}
 
  .f-cont1 {
 
     text-align: center;
     width: 26.8vh;
-    height: 16.7vh;
+    height: 21.7vh;
     margin-left: 43.3vh;
-    margin-top: 6.1vh;
+    margin-top: 3.5vh;
     margin-bottom: 4.57vh;
+    
  }
 
  .f-cont2 {
 
     text-align: center;
     width: 26.8vh;
-    height: 16.7vh;
+    height: 21.7vh;
     margin-left: 13.0vh;
-    margin-top: 6.123vh;
+    margin-top: 3.5vh;
  }
 
  .f-cont3 {
 
     text-align: center;
     width: 26.8vh;
-    height: 16.7vh;
+    height: 21.7vh;
     margin-left: 13.0vh;
-    margin-top: 6.123vh;
+    margin-top: 3.5vh;
     margin-right: 43.2vh;
  }
 
@@ -57,6 +69,7 @@ body {
     font-style: normal;
     font-weight: 700;
     margin-top: 1.5vh;
+    
 
  }
 
@@ -70,6 +83,7 @@ body {
     font-weight: 400;
     line-height: 140%; /* 19.6px */
     margin-top: 1.3vh;
+    
  }
 
  .nl {
@@ -151,6 +165,15 @@ body {
     
 }
 
+.btn2:hover {
+
+   -webkit-text-fill-color: white;
+    border-color: #0156FF;
+    transition-duration: 0.4s;
+    background-color: #0156FF;
+   
+}
+
 .inf {
 
     width: 100%;
@@ -208,6 +231,14 @@ body {
 
 }
 
+.hd3:hover {
+
+   -webkit-text-fill-color: #ff8400;
+    border-color: #ff8400;
+    transition-duration: 0.4s;
+
+}
+
 .hd4 {
 
     display: flex;
@@ -218,6 +249,14 @@ body {
     color: White;
     transition: all 0.5s ease-in-out;
     line-height: 140%;
+
+}
+
+.hd4:hover {
+
+   -webkit-text-fill-color: #ff8400;
+    border-color: #ff8400;
+    transition-duration: 0.4s;
 
 }
 
