--- a/src/css/navbar.css
+++ b/src/css/navbar.css
@@ -53,6 +53,17 @@ body {
 
 }
 
+.topnav:hover {
+
+    background: rgba( 255, 255, 255, 0.25 );
+    box-shadow: 0 8px 32px 0 rgba( 31, 38, 135, 0.37 );
+    backdrop-filter: blur( 4px );
+    -webkit-backdrop-filter: blur( 4px );
+    border-radius: 10px;
+    transition: all 0.5s ease-in-out;
+
+}
+
 .sep {
 
     width: 100%;
