--- a/src/css/tc_au.css
+++ b/src/css/tc_au.css
@@ -103,6 +103,26 @@ article {
    justify-content: center;
 }
 
+.au1:hover {
+   
+   -webkit-text-fill-color: #ff8400;
+   box-shadow: 0 8px 32px 0 rgba( 31, 38, 135, 0.37 );
+   backdrop-filter: blur( 4px );
+   -webkit-backdrop-filter: blur( 4px );
+   border: 1px solid rgba( 255, 255, 255, 0.18 );
+   transition-duration: 0.4s;
+}
+
+.au2:hover {
+   
+   -webkit-text-fill-color: #0156FF;
+   box-shadow: 0 8px 32px 0 rgba( 31, 38, 135, 0.37 );
+   backdrop-filter: blur( 4px );
+   -webkit-backdrop-filter: blur( 4px );
+   border: 1px solid rgba( 255, 255, 255, 0.18 );
+   transition-duration: 0.4s;
+}
+
 .auhead1 {
    
    display: flex;
