--- a/src/css/customer_dashboard.css
+++ b/src/css/customer_dashboard.css
@@ -131,10 +131,12 @@ body {
 .ai-gc {
 
     margin-top: 2.0vh;
+    margin-left: 2.5vw;
 
     display: grid;
-    grid-template-columns: auto auto;
+    grid-template-columns: 22.5vw 22.5vw;
     grid-template-rows: auto;
+    column-gap: 10.0vh;
 }
 
 .ci-head {
@@ -145,14 +147,12 @@ body {
     font-style: normal; 
     font-weight: 500; 
     text-decoration: none;
-    margin-left: 2.5vw;
     transition: all 0.5s ease-in-out;
 
 }
 
 .ci-info{
 
-    margin-left: 2.5vw;
     color: grey; 
     font-family: Poppins; 
     font-size: 0.8vw; 
@@ -160,12 +160,12 @@ body {
     font-weight: 300; 
     text-decoration: none;
     transition: all 0.5s ease-in-out;
+    word-break: normal;
 
 }
 
 .ci-edit {
 
-    margin-left: 2.5vw;
 
     font-size: 1.4vh;
     font-family: 'Poppins', sans-serif;
@@ -192,14 +192,14 @@ body {
 
 }
 
-.Modal {
+.modal {
     display: none;
     position: fixed;
     z-index: 1;
     top: 30%;
     left: 40%;
 
-    width: 20.0vw;
+    width: 15.0vw;
     overflow: auto;
     
     border: 0.4vh solid #ff8400;
@@ -252,7 +252,7 @@ body {
     border-color: #000;
     border-radius: 0.8vh;
     border: 0.2vh solid grey;
-    margin-left: 4.0vw;
+    margin-left: 2.0vw;
     text-align: center;
 
 }
@@ -304,3 +304,51 @@ body {
     border-radius: 10.0vh;
     transition: all 0.3s ease-out;
 }
+
+.round {
+    position: relative;
+  }
+  
+  .round label {
+    background-color: #fff;
+    border: 0.4vh solid darkgray;
+    border-radius: 50%;
+    cursor: pointer;
+    height: 2.8vh;
+    left: 0;
+    position: absolute;
+    top: 0;
+    width: 2.8vh;
+  }
+  
+  .round label:after {
+    border: 0.4vh solid #fff;
+    border-top: none;
+    border-right: none;
+    content: "";
+    height: 0.6vh;
+    left: 0.7vh;
+    opacity: 0;
+    position: absolute;
+    top: 0.8vh;
+    transform: rotate(-45deg);
+    width: 1.2vh;
+  }
+  
+  .round input[type="checkbox"] {
+    visibility: hidden;
+  }
+  
+  .round input[type="checkbox"]:checked + label {
+    background-color: #ff8400;
+    border-color: #ff8400;
+  }
+  
+  .round input[type="checkbox"]:checked + label:after {
+    opacity: 1;
+  }
+
+  .cd-checkbox-container {
+
+    margin-left: 6.5vw;
+  }
