--- a/src/css/footer.css
+++ b/src/css/footer.css
@@ -110,6 +110,7 @@ body {
     font-weight: 500;
     line-height: 132.5%; /* 50.35px */
     transition: all 0.5s ease-in-out;
+    cursor: pointer
  }
 
  .su:hover {
@@ -175,6 +176,7 @@ body {
     text-decoration: none;
     overflow: hidden;
     text-align: center;
+    cursor: pointer;
     
 }
 
