--- a/src/css/navbar.css
+++ b/src/css/navbar.css
@@ -13,7 +13,7 @@ body {
     display: flex;
     flex-direction: row;
     font-family: Poppins;
-    font-size: 1.2vh;
+    font-size: 0.6vw;
     font-style: normal;
     font-weight: 600;
     line-height: normal;
@@ -22,9 +22,9 @@ body {
 
 .tbt {
 
-    margin-top: 1.3vh;
+    margin-top: 0.65vw;
     -webkit-text-fill-color: #F5F7FF;
-    margin-left: 25.5vh;
+    margin-left: 2.75vw;
 }
 
 .tbh {
@@ -39,7 +39,7 @@ body {
 
     margin-top: 1.3vh;
     -webkit-text-fill-color: #fff;
-    padding-left: 0.4vh;
+    padding-left: 0.11vw;
 }
 
 .topnav {
@@ -47,7 +47,7 @@ body {
     width: 100%;
     height: 9.2vh;
     flex-shrink: 0;
-    border: 2.0vh;
+    border: 0.55vw;
     border-color: #020202;
     display: flex;
     transition: all 0.5s ease-in-out;
@@ -57,10 +57,10 @@ body {
 .topnav:hover {
 
     background: rgba( 255, 255, 255, 0.25 );
-    box-shadow: 0 8px 32px 0 rgba( 31, 38, 135, 0.37 );
-    backdrop-filter: blur( 4px );
-    -webkit-backdrop-filter: blur( 4px );
-    border-radius: 10px;
+    box-shadow: 0 0.4vw 1.6vw 0 rgba( 31, 38, 135, 0.37 );
+    backdrop-filter: blur( 0.2vw );
+    -webkit-backdrop-filter: blur( 0.2vw );
+    border-radius: 0.5vw;
     transition: all 0.5s ease-in-out;
 
 }
@@ -70,7 +70,7 @@ body {
     width: 100%;
     height: 0.2vh;
     flex-shrink: 0;
-    border: 2.0vh;
+    border: 0.4vw;
     background-color: #CACDD8;
     display: flex;
 
@@ -78,13 +78,13 @@ body {
 
 .df {
  
-    font-size: 1.4vh;
+    font-size: 0.75vw;
     font-family: 'Poppins', sans-serif;
     font-weight: 600;
     text-decoration: none;
     color: black;
     transition: all 0.5s ease-in-out;
-    padding-right: 2.5vh;
+    padding-right: 1.0vw;
     margin-top: 3.7vh;
 
 }
