--- a/src/css/customer_dashboard.css
+++ b/src/css/customer_dashboard.css
@@ -367,4 +367,35 @@ body {
     align-content: center;
     
 }
-  
+
+.cd-logout {
+
+    display: block;
+    font-family: Poppins;
+    font-size: 1.4vh;
+    font-style: normal;
+    font-weight: 600;
+    -webkit-text-fill-color: White;
+    height: 4.0vh;
+    width: 12.0vh;
+    border: 0.5vh solid #ff8400;
+    border-radius: 5.0vh;
+    background-color: #ff8400;
+    transition-duration: 0.2s;
+    text-decoration: none;
+    overflow: hidden;
+    text-align: center;
+    cursor: pointer;
+    margin-left: 2.0vw;
+    margin-top: 0.5vh;
+    
+}
+
+.cd-logout:hover {
+
+    border-color: #ff8400;
+    transition-duration: 0.4s;
+    background-color: transparent;
+    -webkit-text-fill-color: #ff8400;
+   
+}
