--- a/src/css/admin_panel.css
+++ b/src/css/admin_panel.css
@@ -3,6 +3,7 @@ body {
     padding: 0;
     transition: all 0.5s ease-in-out;
     font-family: 'Poppins', sans-serif;
+    background-color: #020202;
 }
 .topnav {
 
@@ -13,6 +14,8 @@ body {
     display: grid;
     grid-template-columns: 15% 2% 78%;
     transition: all 0.5s ease-in-out;
+
+    background-color: #020202;
 
 }
 
@@ -59,11 +62,12 @@ body {
     font-family: 'Poppins', sans-serif;
     font-weight: 600;
     text-decoration: none;
-    color: black;
+    color: white;
     transition: all 0.5s ease-in-out;
     padding-right: 1.0vw;
     margin-top: 3.7vh;
     margin-left: 1.5vw;
+    cursor: pointer;
 
 }
 
@@ -71,6 +75,7 @@ body {
  
     -webkit-text-fill-color: #ff8400;
     transition-duration: 0.2s;
+    cursor: pointer;
 
 }
 
@@ -91,10 +96,14 @@ body {
     margin-bottom: 2.6vh;
     margin-left: 9.0vw;
 
+    color: white;
+
     padding-top: 0.6vh;
     padding-bottom: 0.8vh;
     padding-left: 1.25vw;
     padding-right: 1.25vw;
+
+    cursor: pointer;
 }
 
 .od:hover {
@@ -185,6 +194,8 @@ body {
     font-weight: 600;
     text-decoration: none;
 
+    cursor: pointer;
+
 }
 
 .sidebar-item-text:hover {
@@ -206,4 +217,78 @@ body {
 
     display: grid;
     grid-template-columns: auto auto auto auto auto;
+}
+
+table {
+    border-collapse: collapse;
+    width: 100%;
+
+    border: 0.2vw solid #ff8400;
+    border-radius: 2.0vw;
+
+    -webkit-text-fill-color: white;
+    
+}
+  
+th{
+
+    padding: 0.4vw;
+    text-align: center;
+    border-bottom: 0.2vw solid #ff8400;
+
+    font-family: 'Poppins', sans-serif;
+    font-size: 1.2vw; 
+    font-style: normal; 
+    font-weight: 600;
+}
+  
+td {
+
+    padding: 0.6vw;
+    text-align: center;
+    border: 0.2vw solid #ff8400;
+    font-style: normal; 
+    font-weight: 600;
+}
+
+.info {
+
+    display: block;
+
+    margin-left: 3.0vw;
+    margin-right: 3.0vw;
+    margin-top: 1.75vw;
+
+}
+
+.edit-btn {
+
+    display: block;
+
+    margin-left: auto;
+    margin-right: auto;
+
+    -webkit-text-fill-color: white;
+
+    padding-top: 0.6vh;
+    padding-bottom: 0.8vh;
+    padding-left: 1.25vw;
+    padding-right: 1.25vw;
+
+    font-size: 0.7vw;
+    font-family: 'Poppins', sans-serif;
+    font-style: normal;
+    font-weight: 600;
+    border-radius: 0.25vh;
+    border: 0.2vw solid var(--Color---3, white);
+
+    background-color: transparent;
+}
+
+.search-bar {
+
+    display: block;
+
+    color: white;
+    margin-bottom: 4.0vh;
 }
