--- a/src/css/admin_panel.css
+++ b/src/css/admin_panel.css
@@ -124,7 +124,7 @@ body {
 .sidebar {
 
     width: auto;
-    height: 100%;
+    min-height: 90.0vh;
     border-radius: 0.0vh;
     background-image: url("https://cdn.discordapp.com/attachments/1196163965110202440/1230570212676341800/Pngtreeorange_background_business_lines_1326869.png?ex=6633ccd1&is=662157d1&hm=0addc2a794b8acba28b71ecce71ec8b82be8fef1fb265154a0228e3e02e4ecef&");
     background-color: transparent;
@@ -397,82 +397,8 @@ td {
 
 }
 
-.cd-text{
-
-    color: white;
-    font-family: Poppins; 
-    font-size: 0.8vw; 
-    font-style: normal; 
-    font-weight: 400; 
-    text-decoration: none;
-    transition: all 0.5s ease-in-out;
-
+.search-result
+{
+    color: #ff8400;
 }
 
-.cd-pass {
-
-    display: block;
-    font-size: 1.8vh;
-    -webkit-text-fill-color: #000;
-    -webkit-text-stroke-color: #000;
-    border-color: #000;
-    border-radius: 0.8vh;
-    border: 0.2vh solid grey;
-    margin-left: auto;
-    margin-right: auto;
-    text-align: center;
-
-}
-
-.modal-header {
-    color: white; 
-    font-family: Poppins; 
-    font-size: 1.0vw; 
-    font-style: normal; 
-    font-weight: 600; 
-    text-decoration: none;
-    transition: all 0.5s ease-in-out;
-    padding: 0.5vh;
-}
-
-.modal-divider {
-
-    width: 100%;
-    height: 0.4vh;
-    background-color: #ff8400;
-}
-
-.modal-body {
-
-    text-align: center;
-}
-
-.modal-content {
-    box-shadow: 0 0.4vh 0.8vh 0 rgba(0,0,0,0.2),0 0.6vh 2.0vh 0 rgba(0,0,0,0.19);
-}
-
-.modal-submit {
-
-    font-size: 1.4vh;
-    font-family: 'Poppins', sans-serif;
-    font-style: normal;
-    font-weight: 600;
-    border-radius: 5vh;
-    border: 0.4vh solid var(--Color---3, #ff8400);
-    -webkit-text-fill-color: #ff8400;
-    background-color: white;
-    text-decoration: none;
-
-    padding-top: 0.8vh;
-    padding-bottom: 0.8vh;
-    padding-left: 2.5vh;
-    padding-right: 2.5vh;
-}
-
-.modal-submit:hover {
-
-    -webkit-text-fill-color: white;
-    background-color: #ff8400;
-    transition-duration: 0.4s;
-
-}
